# dotfiles

./: .editorconfig  .gitignore  .gitmodules  INSTALL.md  README.md  Xresources  bootstap.sh  bootstap_haskell.sh  bootstrap  fdignore  ghci  gitconfig  gtkrc-2.0  pkglist.txt  profile  refind_linux.conf.tpl  tmux.conf  update.sh  vimrc  xbindkeysrc  zshrc
.zsh/: alias.zsh  completions.zsh  functions.zsh  init.zsh  machine.zsh  misc.zsh
boot/: refind_linux.conf
config/: alacritty.yml  brave-flags.conf  chromium-flags.conf  compton.conf  gsimplecal  gtk-3.0  i3  networkmanager-dmenu.ini  polybar  rofi.rasi
etc/: environment  mpd.conf  pacman.conf  resolv.conf
gnupg/: gpg-agent.conf  gpg.conf  pinentry-dmenu.conf
scripts/: autoname_workspaces  available_browser  azure_profile  calc  change_brightness  check_dnd  check_updates  check_updates_refresh  cleanup_db_migrations  configure_displays  configure_touchpad  connect_headphones  copy_image  current_track  fixwinfiles  generate_kubeconfig  greenclip_clear  headphones  i3exit  kubectl_context  music  music_control  music_headphones  networkmanager_dmenu  reconnect_headphones  toggle_dnd  toggle_opaque  toggle_touchpad  unblock_docker_bridge  unlock_keyring  wallpaper  wifi_control  yubikey_touch_status
tools/current_track/: Cargo.toml
tools/current_track/src/: dbus_player.rs  main.rs  mpd.rs  spotify.rs
zsh/: alias.zsh  atuin.zsh  completions.zsh  fzf.zsh  init.zsh  keybindings.zsh  misc.zsh  omz.zsh  options.zsh  p10k-transient.zsh  p10k.zsh  powerlevel9k.zsh  (+3 more)
zsh-custom/: music.zsh  statusline.zsh
(+79 files in other folders)
